--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,34 @@
 name: dakuchazi
 on:
   push:
-    branches:    
+    branches:
       - main
 jobs:
   push:
-      runs-on: ${{ matrix.operating-system }}
-      strategy:
-        matrix:
-          # in this example, there is a newer version already installed, 3.7.7, so the older version will be downloaded
-          operating-system: ['ubuntu-20.04']
-      steps:
+    runs-on: ${{ matrix.operating-system }}
+    strategy:
+      matrix:
+        # in this example, there is a newer version already installed, 3.7.7, so the older version will be downloaded
+        operating-system: ["ubuntu-22.04"]
+    steps:
       - uses: actions/checkout@v3 # Checking out the repo
       - name: Run with setup-python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: "3.9"
           update-environment: false
-          cache: 'pipenv'
+          cache: "pipenv"
       - name: Install pipenv
         run: pip3 install --user pipenv
       - name: Install dependecies
-        run:  pipenv --python python3 && pipenv install
+        run: pipenv --python python3 && pipenv install
       - name: Build
         env:
           USERNAME: ${{ secrets.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
           XMLRPC_PHP: ${{ secrets.XMLRPC_PHP }}
         run: pipenv run build
-      - name: Commit and push if changed   # 将.md_sha1 README.md 更新到仓库
+      - name: Commit and push if changed # 将.md_sha1 README.md 更新到仓库
         run: |
           git diff
           git config --global user.email "hansxu@gmail.com"
